--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -1,87 +1,133 @@
 ﻿% This file was created with Citavi 6.2.0.12
 
-@proceedings{.2018,
- year = {2018},
- title = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
- publisher = {PTI},
- series = {{Annals of Computer Science and Information Systems}}
+@article{ArgandaCarreras.2017,
+ abstract = {Summary
+
+State-of-the-art light and electron microscopes are capable of acquiring large image datasets, but quantitatively evaluating the data often involves manually annotating structures of interest. This process is time-consuming and often a major bottleneck in the evaluation pipeline. To overcome this problem, we have introduced the Trainable Weka Segmentation (TWS), a machine learning tool that leverages a limited number of manual annotations in order to train a classifier and segment the remaining data automatically. In addition, TWS can provide unsupervised segmentation learning schemes (clustering) and can be customized to employ user-designed image features or classifiers.
+
+Availability and Implementation
+
+TWS is distributed as open-source software as part of the Fiji image processing distribution of ImageJ at http://imagej.net/Trainable{\_}Weka{\_}Segmentation .
+
+Contact
+
+ignacio.arganda@ehu.eus.
+
+Supplementary information
+
+Supplementary data are available at Bioinformatics online.},
+ author = {Arganda-Carreras, Ignacio and Kaynig, Verena and Rueden, Curtis and Eliceiri, Kevin W. and Schindelin, Johannes and Cardona, Albert and {Sebastian Seung}, H.},
+ year = {2017},
+ title = {{Trainable Weka Segmentation: a machine learning tool for microscopy pixel classification}},
+ keywords = {Animals;Drosophila/anatomy {\&} histology/ultrastructure;Image Processing, Computer-Assisted/methods;Machine Learning;Microscopy/methods;Software},
+ pages = {2424--2426},
+ volume = {33},
+ number = {15},
+ journal = {{Bioinformatics (Oxford, England)}},
+ doi = {10.1093/bioinformatics/btx180}
 }
 
 
-@inproceedings{Adams.2018,
- author = {Adams, Tim and D{\"o}rpinghaus, Jens and Jacobs, Marc and Steinhage, Volker},
- title = {{Automated lung tumor detection and diagnosis in CT Scans using texture feature analysis and SVM}},
- pages = {13--20},
- publisher = {PTI},
- series = {{Annals of Computer Science and Information Systems}},
- booktitle = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
- year = {2018},
- doi = {10.15439/2018F176}
+@book{Ferreira.2012,
+ author = {Ferreira, T. and Rasband, W.},
+ year = {2012},
+ title = {{ImageJ User Guide: IJ 1.42r}},
+ url = {https://books.google.de/books?id=JgAcmQEACAAJ}
 }
 
 
-@article{Armato.2016,
- abstract = {The purpose of this work is to describe the LUNGx Challenge for the computerized classification of lung nodules on diagnostic computed tomography (CT) scans as benign or malignant and report the performance of participants' computerized methods along with that of six radiologists who participated in an observer study performing the same Challenge task on the same dataset. The Challenge provided sets of calibration and testing scans, established a performance assessment process, and created an infrastructure for case dissemination and result submission. Ten groups applied their own methods to 73 lung nodules (37 benign and 36 malignant) that were selected to achieve approximate size matching between the two cohorts. Area under the receiver operating characteristic curve (AUC) values for these methods ranged from 0.50 to 0.68; only three methods performed statistically better than random guessing. The radiologists' AUC values ranged from 0.70 to 0.85; three radiologists performed statistically better than the best-performing computer method. The LUNGx Challenge compared the performance of computerized methods in the task of differentiating benign from malignant lung nodules on CT scans, placed in the context of the performance of radiologists on the same task. The continued public availability of the Challenge cases will provide a valuable resource for the medical imaging research community.},
- author = {Armato, Samuel G. and Drukker, Karen and Li, Feng and Hadjiiski, Lubomir and Tourassi, Georgia D. and Engelmann, Roger M. and Giger, Maryellen L. and Redmond, George and Farahani, Keyvan and Kirby, Justin S. and Clarke, Laurence P.},
+@article{Koornneef.2010,
+ abstract = {Twenty-five years ago, Arabidopsis thaliana emerged as the model organism of choice for research in plant biology. A consensus was reached about the need to focus on a single organism to integrate the classical disciplines of plant science with the expanding fields of genetics and molecular biology. Ten years after publication of its genome sequence, Arabidopsis remains the standard reference plant for all of biology. We reflect here on the major advances and shared resources that led to the extraordinary growth of the Arabidopsis research community. We also underscore the importance of continuing to expand and refine our detailed knowledge of Arabidopsis while seeking to appreciate the remarkable diversity that characterizes the plant kingdom.},
+ author = {Koornneef, Maarten and Meinke, David},
+ year = {2010},
+ title = {{The development of Arabidopsis as a model plant}},
+ keywords = {Arabidopsis/genetics;Chromosome Mapping;Genetic Variation;Genome, Plant;History, 20th Century;History, 21st Century;Mutation;Phenotype;Transformation, Genetic},
+ pages = {909--921},
+ volume = {61},
+ number = {6},
+ journal = {{The Plant journal : for cell and molecular biology}},
+ doi = {10.1111/j.1365-313X.2009.04086.x}
+}
+
+
+@proceedings{Kunt.1990,
+ year = {1990},
+ title = {{Visual Communications and Image Processing '90: Fifth in a Series}},
+ publisher = {SPIE},
+ series = {{SPIE Proceedings}},
+ editor = {Kunt, Murat}
+}
+
+
+@article{Minervini.2016,
+ author = {Minervini, Massimo and Fischbach, Andreas and Scharr, Hanno and Tsaftaris, Sotirios A.},
  year = {2016},
- title = {{LUNGx Challenge for computerized lung nodule classification}},
- pages = {044506},
- volume = {3},
- number = {4},
- issn = {2329-4302},
- journal = {{Journal of Medical Imaging}},
- doi = {10.1117/1.JMI.3.4.044506}
+ title = {{Finely-grained annotated datasets for image-based plant phenotyping}},
+ pages = {80--89},
+ volume = {81},
+ issn = {01678655},
+ journal = {{Pattern Recognition Letters}},
+ doi = {10.1016/j.patrec.2015.10.013}
 }
 
 
-@article{Kulkarni.2015,
- author = {Kulkarni, Shraddha G. and Bagal, Sahebrao B.},
- year = {2015},
- title = {{Techniques for Lung Cancer Nodule Detection: A Survey}},
- volume = {02},
- number = {09}
+@article{Rueden.2017,
+ abstract = {BACKGROUND
+
+ImageJ is an image analysis program extensively used in the biological sciences and beyond. Due to its ease of use, recordable macro language, and extensible plug-in architecture, ImageJ enjoys contributions from non-programmers, amateur programmers, and professional developers alike. Enabling such a diversity of contributors has resulted in a large community that spans the biological and physical sciences. However, a rapidly growing user base, diverging plugin suites, and technical limitations have revealed a clear need for a concerted software engineering effort to support emerging imaging paradigms, to ensure the software's ability to handle the requirements of modern science.
+
+RESULTS
+
+We rewrote the entire ImageJ codebase, engineering a redesigned plugin mechanism intended to facilitate extensibility at every level, with the goal of creating a more powerful tool that continues to serve the existing community while addressing a wider range of scientific requirements. This next-generation ImageJ, called {\textquotedbl}ImageJ2{\textquotedbl} in places where the distinction matters, provides a host of new functionality. It separates concerns, fully decoupling the data model from the user interface. It emphasizes integration with external applications to maximize interoperability. Its robust new plugin framework allows everything from image formats, to scripting languages, to visualization to be extended by the community. The redesigned data model supports arbitrarily large, N-dimensional datasets, which are increasingly common in modern image acquisition. Despite the scope of these changes, backwards compatibility is maintained such that this new functionality can be seamlessly integrated with the classic ImageJ interface, allowing users and developers to migrate to these new methods at their own pace.
+
+CONCLUSIONS
+
+Scientific imaging benefits from open-source programs that advance new method development and deployment to a diverse audience. ImageJ has continuously evolved with this idea in mind; however, new and emerging scientific requirements have posed corresponding challenges for ImageJ's development. The described improvements provide a framework engineered for flexibility, intended to support these requirements as well as accommodate future needs. Future efforts will focus on implementing new algorithms in this framework and expanding collaborations with other popular scientific software suites.},
+ author = {Rueden, Curtis T. and Schindelin, Johannes and Hiner, Mark C. and DeZonia, Barry E. and Walter, Alison E. and Arena, Ellen T. and Eliceiri, Kevin W.},
+ year = {2017},
+ title = {{ImageJ2: ImageJ for the next generation of scientific image data}},
+ keywords = {Humans;Image Processing, Computer-Assisted/methods;Reproducibility of Results;User-Computer Interface},
+ pages = {529},
+ volume = {18},
+ number = {1},
+ journal = {{BMC bioinformatics}},
+ doi = {10.1186/s12859-017-1934-z}
+}
+
+
+@misc{Scharr.2014,
+ author = {Scharr, Hanno and Minervini, Massimo and Fischbach, Andreas and Tsaftaris, Sotirios A.},
+ year = {2014},
+ title = {{Annotated Image Datasets of Rosette Plants}},
+ number = {No. FZJ-2014-03837},
+ series = {{Technical Report}}
+}
+
+
+@article{Schindelin.2012,
+ abstract = {Fiji is a distribution of the popular open-source software ImageJ focused on biological-image analysis. Fiji uses modern software engineering practices to combine powerful software libraries with a broad range of scripting languages to enable rapid prototyping of image-processing algorithms. Fiji facilitates the transformation of new algorithms into ImageJ plugins that can be shared with end users through an integrated update system. We propose Fiji as a platform for productive collaboration between computer science and biology research communities.},
+ author = {Schindelin, Johannes and Arganda-Carreras, Ignacio and Frise, Erwin and Kaynig, Verena and Longair, Mark and Pietzsch, Tobias and Preibisch, Stephan and Rueden, Curtis and Saalfeld, Stephan and Schmid, Benjamin and Tinevez, Jean-Yves and White, Daniel James and Hartenstein, Volker and Eliceiri, Kevin and Tomancak, Pavel and Cardona, Albert},
+ year = {2012},
+ title = {{Fiji: an open-source platform for biological-image analysis}},
+ keywords = {Algorithms;Animals;Brain/ultrastructure;Computational Biology/methods;Drosophila melanogaster/ultrastructure;Image Enhancement/methods;Image Processing, Computer-Assisted/methods;Imaging, Three-Dimensional/methods;Information Dissemination;Software;Software Design},
+ pages = {676--682},
+ volume = {9},
+ number = {7},
+ journal = {{Nature methods}},
+ doi = {10.1038/nmeth.2019}
 }
 
 
 @article{Walter.2015,
- abstract = {Plant phenotyping refers to a quantitative description of the plant's anatomical, ontogenetical, physiological and biochemical properties. Today, rapid developments are taking place in the field of non-destructive, image-analysis -based phenotyping that allow for a characterization of plant traits in high-throughput. During the last decade, `the field of image-based phenotyping has broadened its focus from the initial characterization of single-plant traits in controlled conditions towards `real-life' applications of robust field techniques in plant plots and canopies. An important component of successful phenotyping approaches is the holistic characterization of plant performance that can be achieved with several methodologies, ranging from multispectral image analyses via thermographical analyses to growth measurements, also taking root phenotypes into account.},
+ abstract = {Plant phenotyping refers to a quantitative description of the plant's anatomical, ontogenetical, physiological and biochemical properties. Today, rapid developments are taking place in the field of non-destructive, image-analysis -based phenotyping that allow for a characterization of plant traits in high-throughput. During the last decade, 'the field of image-based phenotyping has broadened its focus from the initial characterization of single-plant traits in controlled conditions towards 'real-life' applications of robust field techniques in plant plots and canopies. An important component of successful phenotyping approaches is the holistic characterization of plant performance that can be achieved with several methodologies, ranging from multispectral image analyses via thermographical analyses to growth measurements, also taking root phenotypes into account.},
  author = {Walter, Achim and Liebisch, Frank and Hund, Andreas},
  year = {2015},
- title = {Plant phenotyping: from bean weighing to image analysis},
+ title = {{Plant phenotyping: from bean weighing to image analysis}},
  pages = {14},
  volume = {11},
- number = {1},
- journal = {Plant Methods},
+ issn = {1746-4811},
+ journal = {{Plant methods}},
  doi = {10.1186/s13007-015-0056-8}
 }
 
 
-
-@article{Koornneef.2010,
-
-abstract = {Summary Twenty-five years ago, Arabidopsis thaliana emerged as the model organism of choice for research in plant biology. A consensus was reached about the need to focus on a single organism to integrate the classical disciplines of plant science with the expanding fields of genetics and molecular biology. Ten years after publication of its genome sequence, Arabidopsis remains the standard reference plant for all of biology. We reflect here on the major advances and shared resources that led to the extraordinary growth of the Arabidopsis research community. We also underscore the importance of continuing to expand and refine our detailed knowledge of Arabidopsis while seeking to appreciate the remarkable diversity that characterizes the plant kingdom.},
-author = {Koornneef, Maarten and Meinke, David},
-year = {2010},
-title = {The development of Arabidopsis as a model plant},
-pages = {909-921},
-volume = {61},
-number = {6},
-journal = {The Plant Journal},
-}
-
-@book{Ferreira.2012,
-
-Author = {Ferreira, Tiago and Rasband, Wayne},
-year = {2012},
-title = {ImageJ User Guide},
-pages = {133 - 138},
-
-}
-@book{Wirth.2004,
-
-Author = {Wirth, Michael A.},
-year = {2004},
-title = {Shape Analysis and Measurement},
-pages = {30},
-
-}
